--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -132,5 +132,7 @@
 
     <string name="toast_install_terminal">Error launching intent. Install Android Terminal!</string>
     <string name="descriptiontext" />
-
+    <string name="tile_launch_app">Launch Nethunter App</string>
+    <string name="tile_launch_shell">Launch Kali Shell</string>
+    <string name="tile_launch_kali_menu">Launch Kali Menu</string>
 </resources>
